# MiniMikuDanceMobile

./: .gitignore  AGENT.md  AGENTS.md  AliciaSolid_vrm.json  DO.md  LICENSE  MiniMikuDance.sln  PMX_BEPUphysics_v2_mapping.md  README.md  RENAME.md  Roadmap.md  TODO.md  Timeline説明.txt  agent.md  changes.patch  changes_4d83d0f_to_2bfa40d.patch  codex.md  cpp.hint  crash_log.txt  diff.patch  dotnet-no-tl.sh  gemini.md  log.txt  logcat.txt  mediapipe_vrm_mapping.md  mmd_mobile_opentk_pmxparser_bepuphysics.md  physics.txt  test.runsettings  tombstone_03  work_log.md  クラッシュログ.txt
.config/: dotnet-tools.json
.github/workflows/: dotnet.yml
AppCore/: AppCore.csproj  BoneConstraints.cs  Nanoem.Bone.cs  Nanoem.IK.cs  Nanoem.Import.cs  Nanoem.Morph.cs  Nanoem.Physics.cs  Nanoem.Rendering.cs  Nanoem.cs  NativeMotion.cs  README.md
AppCore.Tests/: ARPoseManagerTests.cs  AppCore.Tests.csproj  BepuPhysicsWorldTests.cs  BvhExporterTests.cs  CameraControllerTests.cs  DataClassSerializationTests.cs  DataManagerTests.cs  IKSolverTests.cs  IkManagerTests.cs  JSONUtilTests.cs  ModelExporterTests.cs  ModelImporterTests.cs  MotionApplierTests.cs  MotionEditorTests.cs  NumericsExtensionsMoreTests.cs  NumericsExtensionsTests.cs  RecorderControllerTests.cs  SingletonTests.cs  SolverTests.cs  UIManagerTests.cs  Vector3JsonConverterTests.cs
AppCore.Tests/TestResults/: coverage.cobertura.xml  coverage.xml
AppCore/App/: AppInitializer.cs  AppSettings.cs  BonesConfig.cs  IViewer.cs  Scene.cs
AppCore/Camera/: ARPoseManager.Android.cs  ARPoseManager.cs  ARPoseManager.iOS.cs  CameraController.cs
AppCore/Data/: DataManager.cs  IkChain.cs  (+5 more)
AppDemo/: AppDemo.csproj  Program.cs
Configs/: BoneAliases.json  BonesConfig.json  IkBoneMapping.json  JointLimits.json  RoleConstraints.json  UIConfig.json  appsettings.json  style_tokens_dark.json  style_tokens_light.json
Documents/: AliciaSolid_json.txt  IK_Guide_VRM0x.md  Mobile_MMD_PMX_OpenTK_Guide.md  VRChat_IK2_11point_design.md  angles_vrm17_wide_all.csv  mediapipe_to_gltf_algorithm.md  mediapipe_to_vrm_guide.md  mediapipe_to_vrm_mapping_ja.md  mediapipe_vrm_mapping_updated.md  pose_editor_design.md  pose_mode_toggle_repro.md  pose_per_frame_search.py  smpl_to_vrm_conversion.md  smpl_to_vrm_rotation_guide.md
Domain/: Domain.csproj
MiniMikuDance.Tests/: AdaptPoseTests.cs  MiniMikuDance.Tests.csproj
MiniMikuDanceApp/: MiniMikuDanceApp.csproj  Program.cs  README.md
MiniMikuDanceMaui/: AddKeyPanel.xaml  AddKeyPanel.xaml.cs  AndroidManifest.xml  AnimationView.xaml  AnimationView.xaml.cs  App.cs  App.xaml  App.xaml.cs  AppLogger.cs  BGFXView.cs  BgfxRenderer.cs  BoneAxisControl.xaml  BoneAxisControl.xaml.cs  BoneView.xaml  BoneView.xaml.cs  CameraPage.xaml  CameraPage.xaml.cs  CameraView.xaml  CameraView.xaml.cs  CapturePage.xaml  CapturePage.xaml.cs  DataManager.Maui.cs  EditKeyPanel.xaml  EditKeyPanel.xaml.cs  ErrorNotifier.cs  ExplorerView.xaml  ExplorerView.xaml.cs  FileItem.cs  FolderSelector.cs  GLContextHelper.cs  GyroService.cs  GyroView.xaml  GyroView.xaml.cs  IKView.xaml  IKView.xaml.cs  ImageButtonExtensions.cs  KeyDeletePanel.xaml  KeyDeletePanel.xaml.cs  KeyInputPanel.xaml  KeyInputPanel.xaml.cs  (+69 more)
MiniMikuDanceMaui.Tests/: ConfigLoadTests.cs  MiniMikuDanceMaui.Tests.csproj  MorphHelperTests.cs  RotationLimitTests.cs  ViewTests.cs
Native/: CMakeLists.txt
Native/ios/: CMakeLists.txt
Native/nanoem/: CMakeLists.txt
Native/nanoem/core/: CMakeLists.txt  allocator.c  motion.pb-c.c  motion.pb-c.h  motion.proto  nanoem.c  nanoem.h  nanoem_p.h  protobuf-c.c  protobuf-c.h  version.c
Native/nanoem/core/bone/: CMakeLists.txt  bone.c  info.h  transform.c  transform.h
Native/nanoem/core/ext/: CMakeLists.txt
Native/nanoem/core/ik/: CMakeLists.txt  ConstraintSolver.cc  ConstraintSolver.h  IKSolver.cc  IKSolver.h  info.c
Native/nanoem/core/import/: CMakeLists.txt
Native/nanoem/core/morph/: CMakeLists.txt  model.c  motion.c  motion.h
Native/nanoem/core/physics/: CMakeLists.txt
Native/nanoem/core/pmx/: loader.c  nanoem_p.h
Native/nanoem/core/render/: Rendering.cc
Native/nanoem/emapp/: Archiver.cc  Archiver.h  CMakeLists.txt  ConstraintSolver.h  Forward.h  IKSolver.cc  IKSolver.h  Model.cc  Model.h  ModelIO.cc  Project.cc  Project.h  Rendering.cc  UUID.cc  UUID.h  bone.c  ik.c  morph.c  morph.cc  physics.c  pmx_import.c  viewer.cc  viewer.h
Native/nanoem/emapp/physics/: PhysicsEngine.cc  physics.c
Native/nanoem/emapp/render/: DirectionalLight.cc  Grid.cc  PerspectiveCamera.cc
Native/nanoem/ext/: CMakeLists.txt  importer.h  motion.c  physics.h  physics_bullet.cc
PureViewer/: README.md
TimelineTests/: BoneRotationTests.cs  UnitTest1.cs
Tools/: Program.cs
ViewerApp/: PmxLoader.cs  Viewer.cs  ViewerApp.csproj  VrmLoader.cs  VrmUtil.cs
android/: build.gradle.kts  settings.gradle.kts
coveragereport/: AppCore_ARPoseManager.html  AppCore_AppInitializer.html  AppCore_AppSettings.html  AppCore_BoneData.html  AppCore_BvhExporter.html  AppCore_CameraController.html  AppCore_DataManager.html  AppCore_JSONUtil.html  AppCore_JointData.html  AppCore_ModelData.html  AppCore_ModelExporter.html  AppCore_ModelImporter.html  AppCore_MotionApplier.html  AppCore_MotionData.html  AppCore_MotionEditor.html  AppCore_MotionGenerator.html  AppCore_MotionPlayer.html  AppCore_NumericsExtensions.html  AppCore_PoseDebugVisualizer.html  AppCore_PoseEstimator.html  AppCore_RecorderController.html  AppCore_Singleton_1.html  AppCore_SubMeshData.html  AppCore_UIButton.html  AppCore_UIConfig.html  AppCore_UIManager.html  AppCore_UIToggle.html  AppCore_Vector3JsonConverter.html  AppCore_VrmInfo.html  ViewerApp_Viewer.html  ViewerApp_VrmLoader.html  ViewerApp_VrmModel.html  ViewerApp_VrmSubMesh.html  ViewerApp_VrmUtil.html  index.html  main.js
docs/: LocalBuild.md  ModelConversionGuide.md  NanoemPortingGuide.md  PMX_Bone_and_Morph_Complete_Guide.md  TimelineDesign.md  VRChat_IK2_11point_design.md  architecture.md  development.md  features.md  make.bat  model_conversion.md  物理処理調査依頼.docx
log/: log.txt
main.dance.mu9/: Program.cs  main.dance.mu9.csproj
(+350 files in other folders)
